# mlx-private

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  canary_frontier.py  imdb_dp.py  pubmedqa_dp.py  sst2_dp.py
experiments/mia/: attack.py  demo.py  multi_seed.py  train.py
mlx_private/: __init__.py  _check.py  accountant.py  optimizer.py
private_mlx/: __init__.py  _patch.py  clip.py  grad.py
tests/: test_accountant.py  test_clip.py  test_compile_randomness.py  test_grad.py  test_integration.py  test_lora_dp.py  test_patch.py
